tests/parsing/smtlib/v2.7/errors/097_get-proof_unclosed_1.smt2
(set-logic ALL)
(get-proof _)
